// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Definition component <Anchor /> rendering should render with text and text and target correctly 1`] = `
<a
  className=""
  href="http://amsterdam.nl"
  target="_blank"
>
  Dit is een link naar amsterdam
</a>
`;

exports[`Definition component <Anchor /> rendering should render with text and text correctly 1`] = `
<a
  className=""
  href="http://amsterdam.nl"
  target="_self"
>
  Dit is een link naar amsterdam
</a>
`;
